--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,13 +30,11 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
-          
-      # Runs a single command using the runners shell
-      - name: Run S3 permissions check
-        run: aws s3 ls
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo "Deploying network layer with CF!"
+          aws cloudformation deploy --template-file templates/network.yaml --stack-name sandbox-network \
+          --parameter-overrides $(cat parameters/environments/sandbox/network.ini) \
+          --tags $(cat parameters/environments/sandbox/tags.ini)
