--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           aws-region: eu-west-1
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Cloudformation Network Layer
         run: |
           echo "Deploying network layer with CF!"
           aws cloudformation deploy --template-file templates/network.yaml --stack-name sandbox-network \
