--- a/infrastructure/environment/network.yaml
+++ b/infrastructure/environment/network.yaml
@@ -209,7 +209,8 @@ Outputs:
     Description: A reference to the created VPC
     Value: !Ref VPC
     Export:
-      Name: !Join [ "-", [ !Ref EnvironmentName, vpc ] ]
+      Name: 
+        'Fn::Sub': '${EnvironmentName}-Vpc'
 
   PublicSubnets:
     Description: A list of the public subnets
@@ -222,6 +223,9 @@ Outputs:
   PublicSubnet1:
     Description: A reference to the public subnet in the 1st Availability Zone
     Value: !Ref PublicSubnet1
+    Export:
+      Name: 
+        'Fn::Sub': '${EnvironmentName}-PublicSubnet1'
 
   PublicSubnet2:
     Description: A reference to the public subnet in the 2nd Availability Zone
@@ -230,6 +234,9 @@ Outputs:
   PrivateSubnet1:
     Description: A reference to the private subnet in the 1st Availability Zone
     Value: !Ref PrivateSubnet1
+    Export:
+      Name: 
+        'Fn::Sub': '${EnvironmentName}-PrivateSubnet1'
 
   PrivateSubnet2:
     Description: A reference to the private subnet in the 2nd Availability Zone
